--- a/movies_books_tv_names.Rmd
+++ b/movies_books_tv_names.Rmd
@@ -16,7 +16,7 @@ library(tidyverse)
 ```
 ```{r}
 library(babynames)
-?babynames
+
 ```
 
 
@@ -45,7 +45,8 @@ babynames %>%
   filter(year>=1960) %>%
   ggplot() +
   geom_point(mapping = aes( x=year, y = n, color = name)) + 
-  facet_wrap(~name, scales = "free_y")
+  facet_wrap(~name, scales = "free_y") + 
+  geom_vline(aes(xintercept = 1995), linetype = "dashed", color = "red")
 ```
 
 ```{r}
@@ -61,13 +62,30 @@ babynames %>%
 
 
 ```{r}
+princess_names <- c("Ariel", "Belle", "Jasmine", "Mulan", "Tiana", "Merida", "Elsa", "Giselle")
+
+
+
+princess_yrs <- data.frame(
+  name = princess_names, 
+  
+  year = c(1989, 1991, 1992, 1998, 2009, 2012, 2013, 2007)
+  
+  
+)
+
+
 babynames %>%
-  #filter(name %in% c("Madison", "Hermione", "Chandler", "Cady", "Barack", "Diana", "Heather", "Elle", "Ariel")) %>%
-  filter(name %in% c("Ariel", "Jasmine", "Tiana", "Belle", "Meg", "Mulan", "Elsa"), sex=="F") %>%
+  filter(name %in% princess_names, sex == "F") %>%
   filter(year>=1980) %>%
   ggplot() +
   geom_point(mapping = aes( x=year, y = n, color = name)) + 
-  facet_wrap(~name, scales = "free_y")
+  facet_wrap(~name, scales = "free_y") + 
+  geom_vline(aes(xintercept = year),
+             linetype="dashed",
+             color = "red",
+             data = princess_yrs)
+  
 ```
 
 
@@ -78,26 +96,65 @@ babynames %>%
   filter(year>=1990) %>%
   ggplot() +
   geom_point(mapping = aes( x=year, y = n, color = name)) + 
-  facet_wrap(~name, scales = "free_y")
+  facet_wrap(~name, scales = "free_y") + 
+  geom_vline(aes(xintercept = 2005),
+             linetype = "dashed",
+             color = "red")
 ```
 
 ```{r}
+
+#year markers, introduction for Harry, ron, hermione, luna, minerva, and bellatrix. increasd involvement for ginny and neville, when he became good for severus
+
+
+hp_names <- c("Harry", "Ron", "Hermione", "Neville", "Ginny", "Luna", "Minerva", "Bellatrix", "Severus")
+
+book_dates <- data.frame(
+  name=hp_names, year = c(1997, 1997, 1997, 1997, 2003, 2003, 1997, 2003, 2007)
+)
+
+movie_dates <- data.frame(
+  name=hp_names, year = c(2001, 2001, 2001, 2001, 2007, 2007, 2001, 2007, 2011)
+)
+
 babynames %>%
   #filter(name %in% c("Madison", "Hermione", "Chandler", "Cady", "Barack", "Diana", "Heather", "Elle", "Ariel")) %>%
-  filter(name %in% c("Harry", "Ron", "Hermione", "Neville", "Ginny", "Luna", "Minerva", "Bellatrix")) %>%
+  filter(name %in% hp_names) %>%
   filter(year>=1990) %>%
   ggplot() +
-  geom_point(mapping = aes( x=year, y = n, color = name)) + 
+  geom_point(mapping = aes( x = year, y = n, color = name)) + 
+   geom_vline(aes(xintercept = year),
+             linetype="dashed",
+             color = "red",
+             data = book_dates) +
+   geom_vline(aes(xintercept = year),
+             linetype="dashed",
+             color = "navy",
+             data = movie_dates) +
   facet_wrap(~name, scales = "free_y")
+  
+
+  
+
 ```
+
+
+ 
+
 ```{r}
 babynames %>%
   #filter(name %in% c("Madison", "Hermione", "Chandler", "Cady", "Barack", "Diana", "Heather", "Elle", "Ariel")) %>%
   filter(name %in% c("Edward", "Esme", "Carlisle", "Emmett", "Alice", "Rosalie", "Jasper", "Bella")) %>%
   filter(year>=2000) %>%
   ggplot() +
-  geom_point(mapping = aes( x=year, y = n, color = name)) + 
-  facet_wrap(~name, scales = "free_y")
+  geom_point(mapping = aes( x=year, y = n, color = sex)) + 
+  facet_wrap(~name, scales = "free_y") +  
+  geom_vline(aes(xintercept = 2005),
+             linetype = "dashed",
+             color = "red") + 
+    geom_vline(aes(xintercept = 2008),
+             linetype = "dashed",
+             color = "navy")
 ```
 ```{r}
 babynames %>%
@@ -106,25 +163,34 @@ babynames %>%
   filter(year>=2000) %>%
   ggplot() +
   geom_point(mapping = aes( x=year, y = n, color = name)) + 
-  facet_wrap(~name, scales = "free_y")
+  facet_wrap(~name, scales = "free_y") + 
+  geom_vline(aes(xintercept = 2011),
+             linetype = "dashed",
+             color = "red") + 
+    geom_vline(aes(xintercept = 2015),
+             linetype = "dashed",
+             color = "navy")
 ```
 
 ```{r}
 babynames %>%
   #filter(name %in% c("Madison", "Hermione", "Chandler", "Cady", "Barack", "Diana", "Heather", "Elle", "Ariel")) %>%
   filter(name %in% c("Annakin", "Leia", "Luke", "Han")) %>%
-  filter(year>=1960) %>%
+  filter(year>=1950) %>%
   ggplot() +
-  geom_point(mapping = aes( x=year, y = n, color = name)) + 
-  facet_wrap(~name, scales = "free_y")
+  geom_point(mapping = aes( x=year, y = n, color = sex)) + 
+  facet_wrap(~name, scales = "free_y") + 
+  geom_vline(aes(xintercept = 1977),
+             linetype = "dashed",
+             color = "red")
 ```
 
 ```{r}
 
 babynames %>%
   #filter(name %in% c("Madison", "Hermione", "Chandler", "Cady", "Barack", "Diana", "Heather", "Elle", "Ariel")) %>%
-  filter(name %in% c("Nicole", "Danielle")) %>%
-  filter(year>=1980) %>%
+  filter(name %in% c("Giselle", "Danielle")) %>%
+  #filter(year>=1980) %>%
   ggplot() +
   geom_point(mapping = aes( x=year, y = n, color = sex)) + 
   facet_wrap(~name, scales = "free_y")
@@ -141,94 +207,132 @@ babynames %>%
   facet_wrap(~name, scales = "free_y")
 ```
 ```{r}
+
+#According to https://ohbabynames.com/all-baby-names/xander/, "Xander did not appear on the U.S. popularity charts as an independently given name until 1999"
 babynames %>%
   #filter(name %in% c("Madison", "Hermione", "Chandler", "Cady", "Barack", "Diana", "Heather", "Elle", "Ariel")) %>%
   filter(name %in% c("Buffy", "Willow", "Xander", "Angel")) %>%
   filter(year>=1960) %>%
   ggplot() +
   geom_point(mapping = aes( x=year, y = n, color = sex)) + 
+  facet_wrap(~name, scales = "free_y") + geom_vline(aes(xintercept = 1997),
+             linetype = "dashed",
+             color = "red") +
   facet_wrap(~name, scales = "free_y")
 ```
 
+
+
+
+
+
+
+
+
+
 ```{r}
-dist_names <- babynames %>% 
-  group_by(year) %>%
-  summarise(distinct_names = n_distinct(name), total_babies = sum(n), namesperbaby = distinct_names/total_babies)
 
-dist_names %>%
-  ggplot() + 
-  geom_point(mapping = aes(x = year, y = namesperbaby))
+names <- c("Chandler", "Monica", "Ross", "Rachel", "Phoebe", "Joey", "Monica")
+important_dates <- data.frame(
+  name=names,
+  year=c(1994, 1994, 1994, 1994, 1994, 1994, 1998)
+)
+babynames %>%
+  #filter(name %in% c("Madison", "Hermione", "Chandler", "Cady", "Barack", "Diana", "Heather", "Elle", "Ariel")) %>%
+  filter(name %in% names) %>%
+  filter(year>=1980) %>%
+  ggplot() +
+  geom_point(mapping = aes( x=year, y = n, color = sex)) + 
+  facet_wrap(~name, scales = "free_y") +
+  geom_vline(aes(xintercept = year),
+             linetype="dashed",
+             color = "red",
+             data = important_dates) 
+
+#To make sure the right line is assigned to the right facet, make sure the vector for the line and for the plot are both "name", and then the faceting will apply to both , same for year
+```
 
 
+```{r}
+names <-c("Chandler", "Monica", "Ross", "Rachel", "Phoebe", "Joey")
+important_dates <- data.frame(
+  name="Monica",
+  year=1998
+)
+babynames %>%
+  filter(name %in% names) %>%
+  filter(year>=1980) %>%
+  ggplot() +
+  geom_point(mapping = aes( x=year, y = n, color = sex)) + 
+  geom_vline(aes(xintercept = 1994),
+             linetype = "dashed",
+             color = "red") +
+  facet_wrap(~name, scales = "free_y") + 
+  geom_vline(aes(xintercept=year), linetype = "dashed", color = "navy", data = important_dates)
 
-dist_names %>% 
-  ggplot() + 
-  geom_point(mapping = aes(x = year,y = distinct_names))
+```
 
-dist_names %>% 
-  ggplot() + 
-  geom_point(mapping = aes(x = year,y = total_babies))
+
+```{r}
+babynames %>%
+  filter(name %in% c("Kim", "Khloe", "Kris", "Kylie", "Kendall", "Kourtney", "Bruce", "Caitlyn")) %>%
+  filter(year>=1980) %>% 
+  ggplot() +
+  geom_point(mapping = aes( x=year, y = n, color = sex)) + 
+  facet_wrap(~name, scales = "free_y") +  geom_vline(aes(xintercept = 2007),
+             linetype = "dashed",
+             color = "red")
+
+```
+```{r}
 
 babynames %>%
-  summarise(n_distinct(name))
+  filter(name %in% c("Chloe", "Khloe")) %>%
+  filter(year>=1990) %>% 
+  ggplot() +
+  geom_point(mapping = aes( x=year, y = n, color = name))
+
+
+babynames %>%
+  filter(name %in% c("Courtney", "Kourtney")) %>%
+  filter(year>=1990, sex=="F") %>% 
+  ggplot() +
+  geom_point(mapping = aes( x=year, y = n, color = name))
+
+babynames %>%
+  filter(name %in% c("Kris", "Chris")) %>%
+  filter(year>=1990, sex=="F") %>% 
+  ggplot() +
+  geom_point(mapping = aes( x=year, y = n, color = name))
+
+babynames %>%
+  filter(name %in% c("Kaitlin", "Caitlin", "Caitlyn", "Kaitlyn", "Catelyn", "Katelyn")) %>%
+  filter(year>=1990, sex=="F") %>% 
+  ggplot() +
+  geom_point(mapping = aes( x=year, y = n, color = name))
 
 ```
-
-If the number of distinct names goes down then that means there are names that were used in previous years but not in others. Do they come back? they must but that's also sort of interesting to see gaps
-
-Of 97,310 names that have been given to more than 5 babies in a given year, only 922 have been used every year since 1880, only 922 have been used every year, only 9,380 have appeared in more than 50 years
-
-
-```{r}
-girls_names <- babynames %>% 
-  filter(sex=='F') %>%
-  select(name)
-
-boys_names <- babynames %>% 
-  filter(sex=='M') %>%
-  select(name)  
-unisex_names <- intersect(boys_names, girls_names)
-```
-
-
 ```{r}
 
+kidsnames <- c("Mason", "Penelope", "Reign", "North", "Saint", "Dream")
+
+kardashian_kids <- data.frame( 
+  name = kidsnames, year = c(2009, 2012, 2014, 2013, 2015, 2016)
   
+  )
+
+babynames %>%
+  filter(name %in% kidsnames) %>%
+  filter(year>=2000) %>% 
+  ggplot() +
+  geom_point(mapping = aes( x=year, y = n, color = sex)) + 
+  facet_wrap(~name, scales = "free_y") +  
   
-names_in_years <-babynames %>% 
-  group_by(name) %>%
-  summarise(years_appeared = n_distinct(year), first_year = min(year), last_year = max(year), total_use = sum(n)) %>%
-  filter(years_appeared >=50)
+    geom_vline(aes(xintercept = year),
+             linetype = "dashed",
+             color = "red",
+             data = kardashian_kids)
 
-
-
-names_in_years %>% 
-  filter(years_appeared==138) %>%
-  arrange(desc(total_use))
-
-names_in_years %>% 
-  ungroup() %>%
-  filter(years_appeared==138)
-
-```
-
-```{r}
-names_all_years <-babynames %>% 
-  group_by(name) %>%
-  mutate(years_appeared = n_distinct(year), first_year = min(year), last_year = max(year), total_use = sum(n)) %>%
-  ungroup() %>%
-  filter(years_appeared==138)
-
-names_all_years %>% 
-  group_by(name) %>% 
-  summarise(avg = round(mean(n), digits = 2), stddev = round(sd(n), digits = 2), fewest = min(n), most = max(n), total = sum(n)) %>%
-  arrange(desc(total))
-```
-```{r}
-names_all_years %>% 
-  filter(total_use >= 2398453) %>% 
-  ggplot() + 
-  geom_point(mapping = aes(x = year, y = n, color = name))
 ```
 
 
